@@ -6,10 +6,15 @@ Currently deprecated and liable to be removed:
 
 1.8-21
 
+* check.term was missing a 'stop' so that some unhandled nesting structures
+  in bam(...,discrete=TRUE) failed with an unhelpful error, instead of a 
+  helpful one. Fixed.
+
 * When functions were added to families within mgcv some very large 
   environments could end up attached to those functions, for no good reason.
-  fix.family.link, fix.family.var and fix.family.ls now avoid this, resulting 
-  in smaller gam obects on disk and lower R memory usage. 
+  The problem originated from the dispatch of the generic 'fix.family.link' 
+  and then propagated via fix.family.var and fix.family.ls. This is now avoided,
+  resulting in smaller gam objects on disk and lower R memory usage. 
   Thanks to Niels Richard Hansen for uncovering this. 
 
 * Another bug fix for prediction from discrete fit bam models with an offset, 
